@@ -1,3 +1,11 @@
+2004-10-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* Makefile.am (libgcj-@gcc_version@.jar): Set timestamp of all files
+	and directories in the jar file to the youngest of gcc/ChangeLog,
+	gcc/java/ChangeLog and libjava/ChangeLog.  Sort the file/directory
+	list before passing it to fastjar.
+	* Makefile.in: Rebuilt.
+
 2005-02-24  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* java/awt/font/TextAttribute.java: changed names to lower case;
